fixed nav bar in login page so that when using the drop down bar, the login form doesn't overlap it - ishika

--- a/public/css/loginpage.css
+++ b/public/css/loginpage.css
@@ -147,3 +147,10 @@
     height: 100%;
     border-radius: 1rem;
 }
+.login_img:hover{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem;
+    opacity: 1;
+}
