--- a/public/css/main.css
+++ b/public/css/main.css
@@ -177,6 +177,7 @@ transition: .5s;
 
  ul{
     position: fixed;
+    z-index: 1;
     width: 100%;
     height: 100vh;
     background: var(--p-colour);
